Update GuiManager.java